--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Unreleased
+===================================
+* Update copyright to 2016
+
 Version 1.0.1 (Released 2016-03-29)
 ===================================
 * Add links to Changelog
